<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.xpple.sheep.view.HeaderLayout
        android:id="@+id/top_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_title_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="000****0000"
        android:textColor="@android:color/black"
        android:textSize="20.0sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_already"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="20dp">

        <com.xpple.sheep.view.ClearEditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="8.0dip"
            android:hint="@string/tx_hint_old_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="@dimen/global_mid_text_size" />

        <com.xpple.sheep.view.ClearEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:layout_below="@+id/et_old_password"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="8.0dip"
            android:hint="@string/tx_hint_new_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="@dimen/global_mid_text_size" />

        <com.xpple.sheep.view.ClearEditText
            android:id="@+id/et_verify_password"
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:layout_below="@+id/et_new_password"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="8.0dip"
            android:hint="@string/tx_hint_verify_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="@dimen/global_mid_text_size" />
    </RelativeLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_nickname"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="登录密码需由6~16位字母和数字组成" />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="45.0dip"
        android:layout_below="@+id/hint"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:background="@drawable/global_red_clickable_selector"
        android:enabled="true"
        android:gravity="center"
        android:text="修  改"
        android:textColor="@android:color/white"
        android:textSize="@dimen/global_btn_text_size" />


</RelativeLayout>