<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.xpple.sheep.view.HeaderLayout
        android:id="@+id/top_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_title_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="000****0000"
        android:textColor="@android:color/black"
        android:textSize="20.0sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_already"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="20dp">

        <com.xpple.sheep.view.sKB.PasswordEditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:hint="@string/tx_hint_old_password"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="8.0dip"
            android:enabled="false"
            android:inputType="textPassword"
            android:maxLength="6"
            android:minEms="6"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/global_black_color"
            android:textSize="@dimen/global_mid_text_size"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center_vertical" />

        <com.xpple.sheep.view.sKB.PasswordEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:layout_below="@+id/et_old_password"
            android:hint="@string/tx_hint_new_password"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="8.0dip"
            android:enabled="false"
            android:inputType="textPassword"
            android:maxLength="6"
            android:minEms="6"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/global_black_color"
            android:textSize="@dimen/global_mid_text_size"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp" />
        <com.xpple.sheep.view.sKB.PasswordEditText
            android:id="@+id/et_verify_password"
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:layout_below="@+id/et_new_password"
            android:hint="@string/tx_hint_verify_password"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="8.0dip"
            android:enabled="false"
            android:inputType="textPassword"
            android:maxLength="6"
            android:minEms="6"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/global_black_color"
            android:textSize="@dimen/global_mid_text_size"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_nickname"
        android:layout_centerHorizontal="true"
        android:text="支付密码需由6位数字组成"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/hint" />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="45.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:background="@drawable/global_red_clickable_selector"
        android:enabled="true"
        android:gravity="center"
        android:text="修  改"
        android:textColor="@android:color/white"
        android:textSize="@dimen/global_btn_text_size"
        android:layout_below="@+id/hint" />


</RelativeLayout>