<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.xpple.sheep.view.HeaderLayout
        android:id="@+id/top_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:layout_below="@+id/top_title_bar"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="30.0dip">

        <com.xpple.sheep.view.ClearEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:drawableLeft="@mipmap/ic_phone"
            android:drawablePadding="8.0dip"
            android:hint="@string/tx_hint_phone"
            android:inputType="number"
            android:maxLength="13"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="@dimen/global_mid_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login_password"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:layout_below="@+id/rl_phone"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="10.0dip">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:drawableLeft="@mipmap/ic_key"
            android:drawablePadding="8.0dip"
            android:hint="@string/tx_hint_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="15.0dip"
            android:singleLine="true"
            android:textSize="@dimen/global_mid_text_size" />

        <TextView
            android:id="@+id/tv_lostPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:minWidth="60.0dip"
            android:paddingLeft="5.0dip"
            android:paddingRight="5.0dip"
            android:text="@string/tx_lost_password"
            android:textColor="@color/global_label_color"
            android:textSize="@dimen/global_text_size" />

        <ImageView
            android:id="@+id/clear_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_lostPassword"
            android:paddingRight="15.0dip"
            android:src="@mipmap/delete_xx"
            android:visibility="gone" />

        <View
            android:layout_width="1.0dip"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/tv_lostPassword"
            android:background="@color/global_line_color" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="45.0dip"
        android:layout_below="@+id/rl_login_password"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/global_red_clickable_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="登  录"
        android:textColor="@android:color/white"
        android:textSize="@dimen/global_btn_text_size" />

    <RelativeLayout
        android:id="@+id/rl_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20.0dip"
            android:text="@string/tx_register_new"
            android:textColor="@color/global_red_color"
            android:textSize="@dimen/global_big_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <View
            android:id="@+id/view_0"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/global_red_color" />

        <TextView
            android:id="@+id/tv_login_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="其他登录方式\n(未实现连接)" />

        <View
            android:id="@+id/view_1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/global_red_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@mipmap/ic_login_qq" />

        <ImageView
            android:id="@+id/iv_login_taobao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@mipmap/ic_login_taobao" />

        <ImageView
            android:id="@+id/iv_login_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@mipmap/ic_login_weibo" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80.0dip"
        android:layout_marginLeft="30.0dip"
        android:layout_marginRight="30.0dip"
        android:src="@mipmap/ic_logo" />

</RelativeLayout>